--- a/Assets/pages/about.html
+++ b/Assets/pages/about.html
@@ -76,15 +76,20 @@
             </div>
 
             <div class="hiddenright" id="team">
+                    <div class="team-member">
+                        <h3>Priyanshu Sen</h3>
+                        <p>Owner</p>
+                    </div>
                 <div class="team-container">
                     <div class="team-member">
-                        <h3>Ayush Saraf</h3>
+                        <h3>Arpit Mittal</h3>
                         <p>Founder</p>
                     </div>
                     <div class="team-member">
-                        <h3>Shlok Ghadekar</h3>
+                        <h3>Vedansh Trivedi</h3>
                         <p>CEO</p>
                     </div>
+                    
                 </div>
                 <h2 class="team">Our Team</h2>
             </div>
