--- a/Assets/pages/about.html
+++ b/Assets/pages/about.html
@@ -76,17 +76,13 @@
             </div>
 
             <div class="hiddenright" id="team">
-                    <div class="team-member">
-                        <h3>Priyanshu Sen</h3>
-                        <p>Owner</p>
-                    </div>
                 <div class="team-container">
                     <div class="team-member">
-                        <h3>Arpit Mittal</h3>
+                        <h3>Dr. G Vishwanathan</h3>
                         <p>Founder</p>
                     </div>
                     <div class="team-member">
-                        <h3>Vedansh Trivedi</h3>
+                        <h3>Nalini N</h3>
                         <p>CEO</p>
                     </div>
                     
